Criando componente Home

--- a/src/app/components/formularios/formularios.component.html
+++ b/src/app/components/formularios/formularios.component.html
@@ -3,7 +3,7 @@
 
     <div class="grid">
         <div class="col-12 ">
-            <h1>Lançamentos</h1>
+            <h1>Lançamentos Receitas</h1>
         </div>
         <div class="p-fluid col-12 ">
             <label>Descrição</label>
