--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -20,10 +20,10 @@
 
                 <li class="navbar-menuitem"><a routerLink="home"><i class="pi pi-home"></i>Home</a></li>
                 <li class="navbar-menuitem">
-                    <a href="#"><i class="pi pi-minus"></i>Lançamentos Despesas</a></li>
+                    <a href="#"><i class="pi pi-arrow-down"></i>Lançamentos Despesas</a></li>
 
 
-                <li class="navbar-menuitem"><a routerLink="receitas"><i class="pi pi-plus"></i>Lançamentos Receitas</a></li>
+                <li class="navbar-menuitem"><a routerLink="receitas"><i class="pi pi-arrow-up"></i>Lançamentos Receitas</a></li>
                 <li class="navbar-menuitem">
                     <a href="#"><i class="pi pi-money-bill"></i>Resumo</a>
                 </li>
