--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -20,7 +20,7 @@
 
                 <li class="navbar-menuitem"><a routerLink="home"><i class="pi pi-home"></i>Home</a></li>
                 <li class="navbar-menuitem">
-                    <a href="#"><i class="pi pi-arrow-down"></i>Lançamentos Despesas</a></li>
+                    <a routerLink="despesas"><i class="pi pi-arrow-down"></i>Lançamentos Despesas</a></li>
 
 
                 <li class="navbar-menuitem"><a routerLink="receitas"><i class="pi pi-arrow-up"></i>Lançamentos Receitas</a></li>
