--- a/src/app/components/formularios-despesas/formularios-despesas.component.html
+++ b/src/app/components/formularios-despesas/formularios-despesas.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:40px;  ">
+<div class="container" style="margin-top:40px;">
     <form autocomplete="off" (ngSubmit)="pesquisarDespesas()">
 
         <div class=" grid ">
@@ -13,15 +13,17 @@
                 <input   type="text" pInputText  name="descricao" [(ngModel)]="descricao" >
             </span>
             </div>
-            <div class="p-fluid col-12 ">
-                <label style="display: block; ">Vencimentos</label>
-                <input type="text " pInputText class="p-inputtext-sm box shadow-5 " style="width:95px ">
-                <label>até</label>
-                <input type="text " pInputText class="p-inputtext-sm box shadow-5 " style="width:95px ">
+            <div class="p-fluid col-2 ">
+                <label style="display: block;margin-bottom: 10px;"><h2>Vencimentos</h2></label>
+                <label>Mês</label>
+                <p-calendar dateFormat="mm" view="month" inputStyleClass="width: 95px;" [(ngModel)]="mes" name="mes"></p-calendar>
+                <label>Ano</label>
+
+                <p-calendar dateFormat="yy" view="year" [inputStyle]="{ width: '95px' }" [(ngModel)]="ano" name="ano"></p-calendar>
             </div>
             <div class="col-12 ">
 
-                <p-button label="Pesquisar " type="submit" class="p-button-sm box shadow-5 "></p-button>
+                <p-button label="Pesquisar" type="submit" class="p-button-sm box shadow-5"></p-button>
             </div>
 
         </div>
@@ -47,9 +49,9 @@
                 <td>{{columns.categoria}}</td>
                 <td>{{columns.valor}}</td>
                 <td>{{columns.dataPagamento}}</td>
-                <td> <button style="margin-right: 5px; " pButton pRipple icon="pi pi-trash " type="button " styleClass="p-button-sm " pTooltip="Editar " tooltipPosition="top " class="p-button-rounded p-button-info ">
+                <td> <button style="margin-right: 5px;" pButton pRipple icon="pi pi-trash" type="button " styleClass="p-button-sm " pTooltip="Editar " tooltipPosition="top " class="p-button-rounded p-button-info ">
                     </button>
-                    <button pButton pRipple icon="pi pi-pencil " type="button " styleClass="p-button-sm " pTooltip="Deletar " tooltipPosition="top " class="p-button-rounded p-button-danger "></button>
+                    <button pButton pRipple icon="pi pi-pencil" type="button" styleClass="p-button-sm" pTooltip="Deletar " tooltipPosition="top " class="p-button-rounded p-button-danger "></button>
                 </td>
 
 
@@ -65,7 +67,7 @@
 
 
 
-        <p-button label=" Adicionar Despesas " (click)="adicionaDespesa()" class="p-button-sm box shadow-5 "><i class="pi pi-plus " style="margin-right: 10px; "></i>
+        <p-button label=" Adicionar Despesas " (click)="adicionaDespesa() " class="p-button-sm box shadow-5 "><i class="pi pi-plus " style="margin-right: 10px; "></i>
 
         </p-button>
 
