--- a/src/app/components/formularios-despesas/formularios-despesas.component.html
+++ b/src/app/components/formularios-despesas/formularios-despesas.component.html
@@ -49,9 +49,9 @@
                 <td>{{columns.categoria}}</td>
                 <td>{{columns.valor}}</td>
                 <td>{{columns.dataPagamento}}</td>
-                <td> <button style="margin-right: 5px;" pButton pRipple icon="pi pi-trash" type="button " styleClass="p-button-sm " pTooltip="Editar " tooltipPosition="top " class="p-button-rounded p-button-info ">
+                <td> <button style="margin-right: 5px;" pButton pRipple icon="pi pi-trash" (click)="deletaDespesa(columns)" type="button" styleClass="p-button-sm " pTooltip="Deletar" tooltipPosition="top" class="p-button-rounded p-button-info">
                     </button>
-                    <button pButton pRipple icon="pi pi-pencil" type="button" styleClass="p-button-sm" pTooltip="Deletar " tooltipPosition="top " class="p-button-rounded p-button-danger "></button>
+                    <button pButton pRipple icon="pi pi-pencil" routerLink="/despesas/{{columns.id}}" type="button" styleClass="p-button-sm" pTooltip="Editar" tooltipPosition="top" class="p-button-rounded p-button-danger"></button>
                 </td>
 
 
