--- a/src/app/components/formularios/formularios.component.html
+++ b/src/app/components/formularios/formularios.component.html
@@ -1,30 +1,32 @@
 <div class="container" style="margin-top:40px;  ">
+    <form autocomplete="off" (ngSubmit)="pesquisarReceitas()">
 
-
-    <div class="grid">
-        <div class="col-12 ">
-            <h1>Lançamentos Receitas</h1>
-        </div>
-        <div class="p-fluid col-12 ">
-            <label>Descrição</label>
-            <span class="p-input-icon-left box shadow-5 p-inputtext-sm ">
+        <div class="grid">
+            <div class="col-12 ">
+                <h1>Lançamentos Receitas</h1>
+            </div>
+            <div class="p-fluid col-12 ">
+                <label>Descrição</label>
+                <span class="p-input-icon-left box shadow-5 p-inputtext-sm">
              
-                <i class="pi pi-search "></i>
-                <input   type="text " pInputText  >
+                <input   type="text" pInputText  name="descricao" [(ngModel)]="descricao" >
             </span>
-        </div>
-        <div class="p-fluid col-12 ">
-            <label style="display: block;">Vencimentos</label>
-            <input type="text " pInputText class="p-inputtext-sm box shadow-5" style="width:95px">
-            <label>até</label>
-            <input type="text " pInputText class="p-inputtext-sm box shadow-5" style="width:95px">
-        </div>
-        <div class="col-12 ">
+            </div>
+            <div class="p-fluid col-2 ">
+                <label style="display: block;margin-bottom: 10px;"><h2>Vencimentos</h2></label>
+                <label>Mês</label>
+                <p-calendar dateFormat="mm" view="month" inputStyleClass="width: 95px;" [(ngModel)]="mes" name="mes"></p-calendar>
+                <label>Ano</label>
 
-            <p-button label="Pesquisar" class="p-button-sm box shadow-5"></p-button>
-        </div>
-    </div>
+                <p-calendar dateFormat="yy" view="year" [inputStyle]="{ width: '95px' }" [(ngModel)]="ano" name="ano"></p-calendar>
+            </div>
+            <div class="col-12 ">
 
+                <p-button label="Pesquisar" type="submit" class="p-button-sm box shadow-5"></p-button>
+            </div>
+
+        </div>
+    </form>
     <p-table [value]="receitas" responsiveLayout="stack" [paginator]="true" [rows]="2">
         <ng-template pTemplate="header" let-columns>
             <tr>
@@ -42,9 +44,9 @@
                 <td>{{columns.descricao}}</td>
                 <td>{{columns.valor}}</td>
                 <td>{{columns.dataRecebimento}}</td>
-                <td> <button style="margin-right: 5px;" pButton pRipple icon="pi pi-trash" type="button " styleClass="p-button-sm" pTooltip="Editar" tooltipPosition="top" class="p-button-rounded p-button-info">
-                    </button>
-                    <button pButton pRipple icon="pi pi-pencil" type="button" styleClass="p-button-sm" pTooltip="Deletar" tooltipPosition="top" class="p-button-rounded p-button-danger"></button>
+                <td> <button style="margin-right: 5px;" pButton pRipple icon="pi pi-trash" (click)="deletarReceita(columns)" type="button" styleClass="p-button-sm " pTooltip="Deletar" tooltipPosition="top" class="p-button-rounded p-button-info">
+                </button>
+                    <button pButton pRipple icon="pi pi-pencil" routerLink="/receitas/{{columns.id}}" type="button" styleClass="p-button-sm" pTooltip="Editar" tooltipPosition="top" class="p-button-rounded p-button-danger"></button>
                 </td>
 
 
@@ -58,7 +60,7 @@
     <div class="col-12">
 
 
-        <p-button label=" Adicionar Receitas " class="p-button-sm box shadow-5 "><i class="pi pi-plus" style="margin-right: 10px;"></i>
+        <p-button label=" Adicionar Receitas " (click)="adicionaReceita() " class="p-button-sm box shadow-5 "><i class="pi pi-plus " style="margin-right: 10px; "></i>
 
         </p-button>
     </div>
