Componente Resumo e tabelas com soma gastos, receitas e gastos por categoria

--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -25,7 +25,7 @@
 
                 <li class="navbar-menuitem"><a routerLink="receitas"><i class="pi pi-arrow-up"></i>Lançamentos Receitas</a></li>
                 <li class="navbar-menuitem">
-                    <a href="#"><i class="pi pi-money-bill"></i>Resumo</a>
+                    <a routerLink="resumo"><i class="pi pi-money-bill"></i>Resumo</a>
                 </li>
             </ul>
 
