pegando url do Heroku da API do Back end

--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -27,6 +27,9 @@
                 <li class="navbar-menuitem">
                     <a routerLink="resumo"><i class="pi pi-money-bill"></i>Resumo</a>
                 </li>
+                <li class="navbar-menuitem">
+                    <a routerLink="charts"><i class="pi pi-chart-line"></i>Gráficos</a>
+                </li>
             </ul>
 
         </div>
