--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,11 @@
         .container {
             width: 1170px;
             margin: 0 auto;
+            height: 100%;
+        }
+        .grid {
+            width: 1170px;
+            margin: 0 auto;
+            height: 100%;
         }
     }
